fixing spinner animation on IE

--- a/src/assets/styles/components/_command.scss
+++ b/src/assets/styles/components/_command.scss
@@ -30,6 +30,17 @@ command {
         }
     }
 
+    &__async {
+        border-radius: 50%;
+        margin-right: $default-spacing/2;
+        width: 15px;
+        height: 15px;
+        border: 2px solid rgba(255, 255, 255, 0.1);
+        border-top-color: white;
+        -webkit-animation: spin 1s infinite linear;
+                animation: spin 1s infinite linear;
+    }
+
     &--light {
         .command__icon {
             height: auto;
@@ -67,11 +78,6 @@ command {
         width: 21px;
         height: 21px;
         border-radius: 100%;
-    }
-
-    &__async {
-        width: 30px;
-        height: 30px;
     }
 
     &__dropdown {
@@ -126,4 +132,25 @@ command {
             }
         }
     }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
